Created TestFactory and modified TestServiceCaseQueueService

--- a/force-app/main/default/classes/TestServiceCaseQueueService.cls
+++ b/force-app/main/default/classes/TestServiceCaseQueueService.cls
@@ -1,29 +1,16 @@
-@isTest(SeeAllData=true)
+@isTest
 private class TestServiceCaseQueueService {
+
+    @TestSetup
+    static void dataCreation() {
+        TestFactory.getUserAndCases();
+        TestFactory.getUsersAndCasesAndQueues();
+    }
 	
     @isTest
-    static void testGetUserCasesHandler() {
+    static void testGetUserCasesHandlerPriority() {
 
-        User testUser = [SELECT Id FROM User WHERE IsActive = true LIMIT 1];
-        
-        Case testCase1 = new Case(
-            Status = 'Working',
-            Priority = 'Medium',
-            Origin = 'Web',
-            OwnerId = testUser.Id
-        );
-        Case testCase2 = new Case(
-            Status = 'Closed',
-            Priority = 'Low',
-            Origin = 'Email'
-        );
-        Case testCase3 = new Case(
-            Status = 'New',
-            Priority = 'High',
-            Origin = 'Phone',
-            OwnerId = testUser.Id
-        );
-        insert new List<Case>{testCase1, testCase2, testCase3};
+        User testUser = [SELECT Id FROM User WHERE Name = 'Tester' LIMIT 1];
         
         System.runAs(testUser) {
             Test.startTest();
@@ -35,61 +22,53 @@ private class TestServiceCaseQueueService {
             System.assertEquals(result, resultNonCacheable, 'Methods should work correctly');
             
             Case firstCase = result[0];
-            System.assertEquals('New', firstCase.Status, 'Status does not match');
             System.assertEquals('High', firstCase.Priority, 'Priority does not match');
-            System.assertEquals('Phone', firstCase.Origin, 'Origin does not match');
-            System.assertEquals(true, firstCase.IsOwner__c, 'IsOwner__c does not match');
-            System.assertEquals(testUser.Id, firstCase.OwnerId, 'Owner Id does not match');
 
             Case secondCase = result[1];
-            System.assertEquals('Working', secondCase.Status, 'Status does not match');
             System.assertEquals('Medium', secondCase.Priority, 'Priority does not match');
-            System.assertEquals('Web', secondCase.Origin, 'Origin does not match');
-            System.assertEquals(true, secondCase.IsOwner__c, 'IsOwner__c does not match');
-            System.assertEquals(testUser.Id, secondCase.OwnerId, 'Owner Id does not match');
+        }
+    }
+
+    @isTest
+    static void testGetUserCasesHandlerOrderByOwner() {
+
+        User testUser = [SELECT Id FROM User WHERE Name = 'Smith' LIMIT 1];
+
+        System.runAs(testUser) {
+            Test.startTest();
+            List<Case> result = ServiceCaseQueueService.getUserCases();
+            List<Case> resultNonCacheable = ServiceCaseQueueService.getUserCasesNonCacheable();
+            Test.stopTest();
+
+            System.assertEquals(18, result.size(), 'Expected 18 case');
+
+            Case firstCase = result[0];
+            System.assertEquals('Smith', firstCase.Owner.Name, 'ORDER BY doesn\'t work properly');
+
+            Case secondCase = result[9];
+            System.assertEquals('Bradley', secondCase.Owner.Name, 'ORDER BY doesn\'t work properly');
         }
     }
     
     @isTest
     static void testGetQueuesForUser() {
 
-        Profile p = [SELECT Id FROM Profile WHERE Name='Standard User']; 
-        User u1 = new User(Alias = 'standt', Email='standarduser@testorg.com', 
-            EmailEncodingKey='UTF-8', LastName='Testing', LanguageLocaleKey='en_US', 
-            LocaleSidKey='en_US', ProfileId = p.Id, 
-            TimeZoneSidKey='America/Los_Angeles', UserName='standarduser@testorg.comaSARJHGF'
-        );
-        User u2 = new User(Alias = 'standt12', Email='standarduser@testorg.c43om', 
-            EmailEncodingKey='UTF-8', LastName='Testing54', LanguageLocaleKey='en_US', 
-            LocaleSidKey='en_US', ProfileId = p.Id, 
-            TimeZoneSidKey='America/Los_Angeles', UserName='standarduser@testorg.comaSARJH78GF'
-        );
-        insert new List<User>{u1, u2};
+        User testUser = [SELECT Id FROM User WHERE Name = 'Smith' LIMIT 1];
+        Group testGroup = [SELECT Id FROM Group WHERE Name = 'Test Queue' LIMIT 1];
+        List<GroupMember> groupMembers = [SELECT UserOrGroupId FROM GroupMember WHERE GroupId = :testGroup.Id];
         
-        Group testGroup = new Group(
-            Name = 'Test Queue',
-            Type = 'Queue'
-        );
-        insert testGroup;
-        
-        GroupMember testGroupMember1 = new GroupMember(
-            GroupId = testGroup.Id,
-            UserOrGroupId = u1.Id
-        );
-        GroupMember testGroupMember2 = new GroupMember(
-            GroupId = testGroup.Id,
-            UserOrGroupId = u2.Id
-        );
-        insert new List<GroupMember>{testGroupMember1, testGroupMember2};
-        
-        System.runAs(u1) {
+        System.runAs(testUser) {
             Test.startTest();
-            Set<String> result = new Set<String>(ServiceCaseQueueService.getQueuesForUser(u1.Id));
-
+            Set<String> result = new Set<String>(ServiceCaseQueueService.getQueuesForUser(testUser.Id));
             Test.stopTest();
             
             System.assertEquals(2, result.size(), 'Expected 2 queue Id');
-            System.assertEquals(new Set<String>{testGroupMember1.UserOrGroupId, testGroupMember2.UserOrGroupId}, result, 'Queue Id does not match');
+
+            Set<String> groupMembersId = new Set<String>();
+            for (GroupMember gm : groupMembers) {
+                groupMembersId.add(gm.UserOrGroupId);
+            }
+            System.assertEquals(groupMembersId, result, 'Queue Id does not match');
         }
     }
 
@@ -111,7 +90,8 @@ private class TestServiceCaseQueueService {
     }
 
     @isTest
-    static void testUpdateStatus() {
+    static void testPositiveUpdateStatus() {
+
         Case testCase = new Case(Subject = 'Test Case', Status = 'New');
         insert testCase;
         
@@ -119,8 +99,28 @@ private class TestServiceCaseQueueService {
         ServiceCaseQueueService.updateStatus('Closed', testCase.Id);
         Test.stopTest();
         
-        
         Case updatedCase = [SELECT Id, Status FROM Case WHERE Id =: testCase.Id];
         System.assertEquals('Closed', updatedCase.Status, 'Case status was not updated successfully');
+    }
+
+    @isTest
+    static void testNegativeUpdateStatus() {
+
+        Case testCase = new Case(Subject = 'Test Case', Status = 'New');
+        insert testCase;
+
+        try {
+            ServiceCaseQueueService.updateStatus('Closed', null);
+            System.assert(false, 'Exception should have been thrown for null caseId');
+        } catch (Exception e) {
+            System.assert(e.getMessage().contains('List has no rows for assignment to SObject'), 'Incorrect exception message for null caseId');
+        }
+        
+        try {
+            ServiceCaseQueueService.updateStatus('Closed', '001aj00000GqTeDAAV');
+            System.assert(false, 'Exception should have been thrown for unexisting caseId');
+        } catch (Exception e) {
+            System.assert(e.getMessage().contains('List has no rows for assignment to SObject'), 'Incorrect exception message for unexisting caseId');
+        }
     }
 }
